# topinvoice

./: .env.example  .gitignore  README.md  pyproject.toml
.ai/: coding-style.md  python-cr.md
.github/workflows/: ci.yaml  monthly-pdf-email.yaml
docs/: DEVELOP.md
src/topinvoice/: __main__.py  cli.py  config.py  csv_analysis.py  errors.py  invoice_pdf.py  logging.py  main.py  models.py  pipeline.py  scraping.py
tests/: conftest.py  test_cli.py  test_config.py  test_csv_analysis.py  test_invoice_pdf.py  test_main.py  test_models.py  test_pipeline.py  test_scraping.py
